--- a/src/sass/_itemStatusFilter.scss
+++ b/src/sass/_itemStatusFilter.scss
@@ -1,8 +1,13 @@
-.item-status-btn {
-  &:active,
-  &:focus {
-    color: #fff;
-    background-color: #17a2b8 !important;
-    border-color: #17a2b8 !important;
-  }
+// .item-status-btn {
+//   &:active,
+//   &:focus {
+//     color: #fff;
+//     background-color: #17a2b8 !important;
+//     border-color: #17a2b8 !important;
+//   }
+// }
+.active {
+  color: #fff !important;
+  background-color: #17a2b8 !important;
+  border-color: #17a2b8 !important;
 }
